--- a/AizuOnlineJudge_1.ipynb
+++ b/AizuOnlineJudge_1.ipynb
@@ -1570,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1579,69 +1579,522 @@
      "text": [
       "abcde\n",
       "3\n",
-      "replace 1 3 xyz\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'str' object does not support item assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-683fee137c02>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mcommand\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"replace\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcommand\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m             \u001b[0mstr_l\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcommand\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcommand\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"d,replace,\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mstr_l\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mcommand\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"reverse\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'str' object does not support item assignment"
+      "replace 1 3 xyz\n",
+      "reverse 0 2\n",
+      "print 1 4\n",
+      "xaze\n",
+      "end\n"
      ]
     }
    ],
    "source": [
     "str_l=input()\n",
-    "command_num = input()\n",
-    "\n",
-    "while True:\n",
+    "for i in range(int(input())):\n",
     "    command = input().split()\n",
     "    if command[0] == \"replace\":\n",
-    "        for i in range(int(command[2])+1):\n",
-    "            str_m = list(str_l)\n",
-    "            str_m[int(command[1])+i]=command[3][i]\n",
-    "            str_l = str(str_m)\n",
-    "        print(\"d,replace,\",str_l)\n",
+    "        str_m = list(str_l)\n",
+    "        str_m[int(command[1]):int(command[2])+1]=command[3]\n",
+    "        str_l = \"\".join(str_m)\n",
     "    elif command[0] == \"reverse\":\n",
-    "        p = str_l[int(command[1]):int(command[2])]\n",
-    "        str_l = str_l[:int(command[1])]\n",
-    "        \n",
-    "        \n",
-    "        for i in range(int(command[2])-int(command[1])+2):\n",
-    "            str_l[int(command[1])+i] = p[-i-1]\n",
-    "        print(\"d,reverse, \", str_l)\n",
+    "        str_m = list(str_l)\n",
+    "        str_m[int(command[1]):int(command[2])+1] = str_m[int(command[1]):int(command[2])+1][::-1]\n",
+    "        str_l = \"\".join(str_m)\n",
     "    elif command[0] == \"print\":\n",
-    "        print(str_l[int(command[1]):int(command[2])])\n",
+    "        print(str_l[int(command[1]):int(command[2])+1])\n",
     "    else:\n",
-    "        break\n",
+    "        pass\n",
     "    "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### ITP 1_10-A - Distance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'b'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0 1 1\n",
+      "0.0 0.0 1.0 1.0\n",
+      "1.4142135623730951\n"
+     ]
     }
    ],
    "source": [
-    "a = \"abcde\"\n",
-    "b = a\n",
-    "b[1]"
+    "import math\n",
+    "x1,y1,x2,y2 = [float(a) for a in list(input().split())]\n",
+    "d = math.sqrt((x2-x1)**2 + (y2-y1)**2)\n",
+    "print(d)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ITP 1_10-B - Triangle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{align*}\n",
+    "c^{2} &= a^{2} + b^{2} -2ab \\cdot \\cos C \\\\\n",
+    "h &= b \\cdot \\sin C\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 3 90\n",
+      "6.0\n",
+      "12.0\n",
+      "3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "a,b,C = [float(x) for x in list(input().split())]\n",
+    "c = math.sqrt(a**2 + b**2 - 2*a*b*math.cos(C*(2*math.pi/360)))\n",
+    "L = a+b+c\n",
+    "h = b * math.sin(C*(2*math.pi/360))\n",
+    "S = (1/2)*a*b*math.sin(C*(2*math.pi/360))\n",
+    "print(S)\n",
+    "print(L)\n",
+    "print(h)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ITP 1_10-C - Standard Deviation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{align*}\n",
+    "\\text{variance} \\, & \\sigma^{2} = V(X) = E{(X-mean)^{2}} = \\frac{1}{n} \\sum^{n}_{i=1}(s_{i} - mean)^{2} \\\\\n",
+    "\\text{standard deviation} \\, & \\sigma = \\sqrt{V(X)}\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "70 80 100 90 20\n",
+      "27.85677655436824\n",
+      "3\n",
+      "80 80 80\n",
+      "0.0\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "while True:\n",
+    "    n = int(input())\n",
+    "    if n==0: break\n",
+    "        \n",
+    "    s = [float(x) for x in list(input().split())]\n",
+    "    m = sum(s)/n\n",
+    "    v = sum(map(lambda x:(x-m)**2, s)) / n\n",
+    "    print(math.sqrt(v))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ITP 1_10-D - Distance II"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{align*}\n",
+    "d_{ij} = \\begin{cases}\n",
+    "\\left( \\sum | x_{i} - x_{j} |^{p} \\right)^{\\frac{1}{p}} & \\text{where} & p =1,2,3\\\\\n",
+    "\\max (|x_{i}-y_{i}|) & \\text{where} & p = \\infty\n",
+    "\\end{cases}\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "1 2 3\n",
+      "2 0 4\n",
+      "4.0\n",
+      "2.449489742783178\n",
+      "2.154434690031884\n",
+      "2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "while True:\n",
+    "    n = int(input())\n",
+    "    if n==0: break\n",
+    "        \n",
+    "    x = [float(a) for a in list(input().split())]\n",
+    "    y = [float(a) for a in list(input().split())]\n",
+    "    \n",
+    "    for p in [1,2,3,-1]:\n",
+    "        if p!=-1:\n",
+    "            d = math.pow(sum(map(lambda x,y:(math.fabs(x-y)**p), x,y)), (1./p))\n",
+    "        else:\n",
+    "            d = max(map(lambda x,y:math.fabs(x-y), x,y))\n",
+    "        print(d)\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ITP 1_11-A - Dice I"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 4 8 16 32\n",
+      "EESWN\n",
+      "32\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_set = [int(x) for x in list(input().split())]\n",
+    "move_set = input()\n",
+    "\n",
+    "dice={\"T\":num_set[0], \"S\":num_set[1], \"E\":num_set[2], \"W\":num_set[3], \"N\":num_set[4], \"B\":num_set[5]}\n",
+    "for c in move_set:\n",
+    "    if c==\"E\":\n",
+    "        dice[\"B\"], dice[\"W\"], dice[\"T\"], dice[\"E\"] = dice[\"E\"], dice[\"B\"], dice[\"W\"], dice[\"T\"]\n",
+    "    elif c==\"N\":\n",
+    "        dice[\"N\"], dice[\"T\"], dice[\"S\"], dice[\"B\"] = dice[\"T\"], dice[\"S\"], dice[\"B\"], dice[\"N\"]\n",
+    "    elif c==\"S\":\n",
+    "        dice[\"N\"], dice[\"T\"], dice[\"S\"], dice[\"B\"] = dice[\"B\"], dice[\"N\"], dice[\"T\"], dice[\"S\"]\n",
+    "    elif c==\"W\":\n",
+    "        dice[\"B\"], dice[\"W\"], dice[\"T\"], dice[\"E\"] = dice[\"W\"], dice[\"T\"], dice[\"E\"], dice[\"B\"]\n",
+    "    else:\n",
+    "        pass\n",
+    "print(dice[\"T\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ITP 1_11-B - Dice II"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11 12 13 14 15 16\n",
+      "2\n",
+      "11 12\n",
+      "13\n",
+      "12 14\n",
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "from copy import deepcopy\n",
+    "num_set = [int(x) for x in list(input().split())]\n",
+    "dice={\"T\":num_set[0], \"S\":num_set[1], \"E\":num_set[2], \"W\":num_set[3], \"N\":num_set[4], \"B\":num_set[5]}\n",
+    "q = int(input())\n",
+    "\n",
+    "def dice_move(dice, move):\n",
+    "    if move==\"E\":\n",
+    "        dice[\"B\"], dice[\"W\"], dice[\"T\"], dice[\"E\"] = dice[\"E\"], dice[\"B\"], dice[\"W\"], dice[\"T\"]\n",
+    "    elif move==\"N\":\n",
+    "        dice[\"N\"], dice[\"T\"], dice[\"S\"], dice[\"B\"] = dice[\"T\"], dice[\"S\"], dice[\"B\"], dice[\"N\"]\n",
+    "    elif move==\"S\":\n",
+    "        dice[\"N\"], dice[\"T\"], dice[\"S\"], dice[\"B\"] = dice[\"B\"], dice[\"N\"], dice[\"T\"], dice[\"S\"]\n",
+    "    elif move==\"W\":\n",
+    "        dice[\"B\"], dice[\"W\"], dice[\"T\"], dice[\"E\"] = dice[\"W\"], dice[\"T\"], dice[\"E\"], dice[\"B\"]\n",
+    "    #elif move==\"Q\":\n",
+    "    #    dice[\"S\"], dice[\"E\"], dice[\"N\"], dice[\"W\"] = dice[\"W\"], dice[\"S\"], dice[\"E\"], dice[\"N\"]    \n",
+    "    return dice\n",
+    "\n",
+    "for _ in range(q):\n",
+    "    top, front = [int(x) for x in list(input().split())]\n",
+    "    dice_p = deepcopy(dice)\n",
+    "    if top==num_set[0]:\n",
+    "        pass\n",
+    "    elif top==num_set[1]:\n",
+    "        dice_p = dice_move(dice_p,\"N\")\n",
+    "    elif top==num_set[2]:\n",
+    "        dice_p = dice_move(dice_p,\"W\")\n",
+    "    elif top==num_set[3]:\n",
+    "        dice_p = dice_move(dice_p,\"E\")\n",
+    "    elif top==num_set[4]:\n",
+    "        dice_p = dice_move(dice_p,\"S\")\n",
+    "    elif top==num_set[5]:\n",
+    "        dice_p = dice_move(dice_p,\"N\")\n",
+    "        dice_p = dice_move(dice_p,\"N\")\n",
+    "        \n",
+    "    if dice_p[\"S\"]==front:\n",
+    "        print(dice_p[\"E\"])\n",
+    "    else:\n",
+    "        for _ in range(4):\n",
+    "            #print(\"debug, dice_p = \", dice_p)\n",
+    "            dice_p = dice_move(dice_p, \"S\")\n",
+    "            dice_p = dice_move(dice_p, \"W\")\n",
+    "            dice_p = dice_move(dice_p, \"N\")\n",
+    "            if dice_p[\"S\"]==front:\n",
+    "                print(dice_p[\"E\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ITP 1_11-C - Dice III"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 6\n",
+      "6 5 4 3 2 1\n",
+      "No\n"
+     ]
+    }
+   ],
+   "source": [
+    "from copy import deepcopy\n",
+    "num_set = [int(x) for x in list(input().split())]\n",
+    "dice={\"T\":num_set[0], \"S\":num_set[1], \"E\":num_set[2], \"W\":num_set[3], \"N\":num_set[4], \"B\":num_set[5]}\n",
+    "c = [int(x) for x in list(input().split())]\n",
+    "\n",
+    "def dice_move(dice, move):\n",
+    "    if move==\"E\":\n",
+    "        dice[\"B\"], dice[\"W\"], dice[\"T\"], dice[\"E\"] = dice[\"E\"], dice[\"B\"], dice[\"W\"], dice[\"T\"]\n",
+    "    elif move==\"N\":\n",
+    "        dice[\"N\"], dice[\"T\"], dice[\"S\"], dice[\"B\"] = dice[\"T\"], dice[\"S\"], dice[\"B\"], dice[\"N\"]\n",
+    "    elif move==\"S\":\n",
+    "        dice[\"N\"], dice[\"T\"], dice[\"S\"], dice[\"B\"] = dice[\"B\"], dice[\"N\"], dice[\"T\"], dice[\"S\"]\n",
+    "    elif move==\"W\":\n",
+    "        dice[\"B\"], dice[\"W\"], dice[\"T\"], dice[\"E\"] = dice[\"W\"], dice[\"T\"], dice[\"E\"], dice[\"B\"]\n",
+    "    #elif move==\"Q\":\n",
+    "    #    dice[\"S\"], dice[\"E\"], dice[\"N\"], dice[\"W\"] = dice[\"W\"], dice[\"S\"], dice[\"E\"], dice[\"N\"]    \n",
+    "    return dice\n",
+    "\n",
+    "def dice_pattern(dice):\n",
+    "    top, front = c[0], c[1]\n",
+    "    \n",
+    "    dice_set=[]\n",
+    "    \n",
+    "    for i in range(6):\n",
+    "        dice_p = deepcopy(dice)\n",
+    "        if i==0:\n",
+    "            pass\n",
+    "        elif i==1:\n",
+    "            dice_p = dice_move(dice_p,\"N\")\n",
+    "        elif i==2:\n",
+    "            dice_p = dice_move(dice_p,\"W\")\n",
+    "        elif i==3:\n",
+    "            dice_p = dice_move(dice_p,\"E\")\n",
+    "        elif i==4:\n",
+    "            dice_p = dice_move(dice_p,\"S\")\n",
+    "        elif i==5:\n",
+    "            dice_p = dice_move(dice_p,\"N\")\n",
+    "            dice_p = dice_move(dice_p,\"N\")\n",
+    "    \n",
+    "        dice_set.append(deepcopy(dice_p))\n",
+    "        for _ in range(3):\n",
+    "            dice_p = dice_move(dice_p, \"S\")\n",
+    "            dice_p = dice_move(dice_p, \"W\")\n",
+    "            dice_p = dice_move(dice_p, \"N\")\n",
+    "            dice_set.append(deepcopy(dice_p))\n",
+    "        \n",
+    "    return dice_set\n",
+    "            \n",
+    "dice_set = dice_pattern(dice)\n",
+    "dice_pattern_in_num = [[x[\"T\"], x[\"S\"], x[\"E\"], x[\"W\"], x[\"N\"], x[\"B\"]] for x in dice_set]\n",
+    "if c in dice_pattern_in_num:\n",
+    "    print(\"Yes\")\n",
+    "else:\n",
+    "    print(\"No\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ITP 1_11-D - Dice IV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "from copy import deepcopy\n",
+    "\n",
+    "def dice_move(dice, move):\n",
+    "    if move==\"E\":\n",
+    "        dice[\"B\"], dice[\"W\"], dice[\"T\"], dice[\"E\"] = dice[\"E\"], dice[\"B\"], dice[\"W\"], dice[\"T\"]\n",
+    "    elif move==\"N\":\n",
+    "        dice[\"N\"], dice[\"T\"], dice[\"S\"], dice[\"B\"] = dice[\"T\"], dice[\"S\"], dice[\"B\"], dice[\"N\"]\n",
+    "    elif move==\"S\":\n",
+    "        dice[\"N\"], dice[\"T\"], dice[\"S\"], dice[\"B\"] = dice[\"B\"], dice[\"N\"], dice[\"T\"], dice[\"S\"]\n",
+    "    elif move==\"W\":\n",
+    "        dice[\"B\"], dice[\"W\"], dice[\"T\"], dice[\"E\"] = dice[\"W\"], dice[\"T\"], dice[\"E\"], dice[\"B\"]\n",
+    "    #elif move==\"Q\":\n",
+    "    #    dice[\"S\"], dice[\"E\"], dice[\"N\"], dice[\"W\"] = dice[\"W\"], dice[\"S\"], dice[\"E\"], dice[\"N\"]    \n",
+    "    return dice\n",
+    "\n",
+    "def dice_pattern(dice):\n",
+    "    dice_set=[]\n",
+    "    for i in range(6):\n",
+    "        dice_p = deepcopy(dice)\n",
+    "        if i==0:\n",
+    "            pass\n",
+    "        elif i==1:\n",
+    "            dice_p = dice_move(dice_p,\"N\")\n",
+    "        elif i==2:\n",
+    "            dice_p = dice_move(dice_p,\"W\")\n",
+    "        elif i==3:\n",
+    "            dice_p = dice_move(dice_p,\"E\")\n",
+    "        elif i==4:\n",
+    "            dice_p = dice_move(dice_p,\"S\")\n",
+    "        elif i==5:\n",
+    "            dice_p = dice_move(dice_p,\"N\")\n",
+    "            dice_p = dice_move(dice_p,\"N\")\n",
+    "    \n",
+    "        dice_set.append(deepcopy(dice_p))\n",
+    "        for _ in range(3):\n",
+    "            dice_p = dice_move(dice_p, \"S\")\n",
+    "            dice_p = dice_move(dice_p, \"W\")\n",
+    "            dice_p = dice_move(dice_p, \"N\")\n",
+    "            dice_set.append(deepcopy(dice_p))\n",
+    "        \n",
+    "    return dice_set\n",
+    "            \n",
+    "n,ds = None,[]\n",
+    "\n",
+    "for l in sys.stdin:\n",
+    "    if n is None:\n",
+    "        n = int(l)\n",
+    "    else:\n",
+    "        ds.append([int(x) for x in l.split()])\n",
+    "\n",
+    "v = 1\n",
+    "\n",
+    "for i in range(len(ds)):\n",
+    "    num_set = ds[i]\n",
+    "    dice={\"T\":num_set[0], \"S\":num_set[1], \"E\":num_set[2], \"W\":num_set[3], \"N\":num_set[4], \"B\":num_set[5]}\n",
+    "    dice_set = dice_pattern(dice)\n",
+    "    dice_pattern_in_num = [[x[\"T\"], x[\"S\"], x[\"E\"], x[\"W\"], x[\"N\"], x[\"B\"]] for x in dice_set]\n",
+    "    \n",
+    "    for j in range(len(ds)):\n",
+    "        if j==i:\n",
+    "            pass\n",
+    "        else:\n",
+    "            if ds[j] in dice_pattern_in_num:\n",
+    "                v *= 0\n",
+    "            else:\n",
+    "                v *= 1\n",
+    "\n",
+    "if v==1:\n",
+    "    print(\"Yes\")\n",
+    "else:\n",
+    "    print(\"No\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ITP1を完了"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1660,7 +2113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
